GROOVY-10330